Fix header overflow on mobile

--- a/source/scss/_incl/custom.css
+++ b/source/scss/_incl/custom.css
@@ -2015,7 +2015,6 @@ ul.custom li:before {
 
     /* section */
     section {
-        padding-top: 40px;
         padding-bottom: 40px;
     }
 
