--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -19,13 +19,6 @@
     margin-top: -1rem;
 }
 
-// prevent header covering content on mobile for anchor links
-@media (max-width: 1200px) {
-    html {
-        scroll-padding-top: 106px;
-    }
-}
-
 #slider {
     padding-top: 148px;
 }
